--- a/src/Homfo_task1.css
+++ b/src/Homfo_task1.css
@@ -81,7 +81,6 @@
   display: flex;
   flex-direction: column;
   width: 60%;
-  background-color: antiquewhite;
 }
 
   .map-section{
@@ -103,14 +102,13 @@
     font-family: 'pretendard';
     color: #858585;
   }
-  /*
+  
   .map{
     width: 40%;
-    height: 85%;
-    margin-left: 59%;
+    margin: 2% 5%;
     border-radius: 50%;
     background-color: #d9d9d9;
-  }*/
+  }
   
   .study{
     width: 100%;
