--- a/src/Homfo_task2.css
+++ b/src/Homfo_task2.css
@@ -2,7 +2,7 @@
 /*app-height: 753px 상단바 높이 : 79px*/
 
 .app-container{
-    width: 800px;
+    width: 12vw;
     height: 90vh; 
     margin: 30px;
     text-align: center;
